--- a/임종한/index.html
+++ b/임종한/index.html
@@ -40,7 +40,8 @@
                 도전하는 것을 두려워하지 않는 신입 프론트엔드 개발자, 임종한입니다. 누구의 인생이나 그렇듯 저 또한 지금까지 도전의 연속이었습니다.<br>
                 제 전공과 직업을 버리고 새로운 길로 들어서기로 마음 먹었을 때, 두렵지 않냐는 질문들이 많았습니다. 적은 나이도 아니었고, 그동안 해왔던 것들이
                 있었기 때문입니다. <br>안정적인 상태에서 새로운 도전을 하는 것이 쉬운 결정은 아니었지만, 저의 진정한 적성과 흥미를 찾아 더 나아가기 위해
-                시작하게 되었습니다. <br>지금은 부족한 것이 많은 저이지만, 끊임없이 배우고 공부할 것입니다. </p>
+                시작하게 되었습니다. <br>지금은 부족한 것이 많은 저이지만, 끊임없이 배우고 공부할 것입니다.
+            </p>
         </div>
     </div>
     <!-- //section1 -->
@@ -156,14 +157,156 @@
                         것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
                         것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
                         것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                    <dt>5. What do you think makes front-end development attractive?</dt>
+                    <dd>영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                    <dt>5. What do you think makes front-end development attractive?</dt>
+                    <dd>영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                    <dt>5. What do you think makes front-end development attractive?</dt>
+                    <dd>영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                    <dt>5. What do you think makes front-end development attractive?</dt>
+                    <dd>영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
                 </dl>
             </div>
         </div>
     </div>
     <!-- //section4 -->
 
-    <div id="section5"></div><!-- //section1 -->
-    <div id="section6"></div><!-- //section1 -->
+    <div id="section5">
+        <div class="title">
+            <span class="img"></span>
+            <div class="split t1">profile,</div>
+            <div class="split t2">& comment</div>
+            <p class="desc2">
+                협업없이 혼자 프로젝트를 추진하는 것은 혼자만의 시야와 지식으로 한정된 결과물을 가져온다고 생각합니다.<br>
+                협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.
+            </p>
+        </div>
+        <div class="comment__wrap">
+            <div class="comment__inner">
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다. 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다. 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.
+                        기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+            </div>
+            <div class="comment__inner">
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다. 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다. 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.
+                        기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+                <div class="comment">
+                    <div class="author"><em>학생</em> <span>2023.03.04</span></div>
+                    <p>협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.</p>
+                </div>
+            </div>
+            <div class="comment__input">
+                <input type="text" placeholder="이름">
+                <input type="text" placeholder="비밀번호">
+                <input type="text" placeholder="댓글">
+                <button>댓글 쓰기</button>
+            </div>
+        </div>
+    </div>
+    <!-- //section5 -->
+
+    <div id="section6">
+        <div class="title">
+            <div class="t1">contact</div>
+            <div class="t2">contact@naver.com</div>
+            <div class="list">
+                <ul>
+                    <li><strong>site</strong></li>
+                    <li><a href="#">github</a></li>
+                    <li><a href="#">codepen</a></li>
+                    <li><a href="#">blog</a></li>
+                </ul>
+                <ul>
+                    <li><strong>public</strong></li>
+                    <li><a href="#">webstandard</a></li>
+                    <li><a href="#">html/css</a></li>
+                    <li><a href="#">phython</a></li>
+                </ul>
+                <ul>
+                    <li><strong>site</strong></li>
+                    <li><a href="#">react</a></li>
+                    <li><a href="#">next</a></li>
+                    <li><a href="#">node</a></li>
+                    <li><a href="#">php</a></li>
+                </ul>
+                <ul>
+                    <li><strong>css</strong></li>
+                    <li><a href="#">blog</a></li>
+                    <li><a href="#">shop</a></li>
+                    <li><a href="#">node</a></li>
+                    <li><a href="#">php</a></li>
+                </ul>
+            </div>
+            <div class="address">
+                Copyright © portfolio 2024
+                <p>이 사이트는 리액트로 제작되었습니다.</p>
+            </div>
+        </div>
+    </div>
+    <!-- //section6 -->
+
+
 
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
