--- a/윤지성/index.html
+++ b/윤지성/index.html
@@ -13,6 +13,10 @@
 <body>
     <div id="mainIntro">
         <div class="wallpapers">
+            <div class="draggableIcon introIcon">
+                <img src="assets/img/intro.png" alt="intro">
+                <span>자기 소개</span>
+            </div>
             <div class="draggableIcon youtubeIcon">
                 <img src="assets/img/youtube.png" alt="youtube">
                 <span>나만의 유튜브</span>
@@ -36,14 +40,12 @@
         </div>
 
         <div class="footer__info">
-            <div class="weather"></div>
+            <div class="search">
+                <input type="text" name="" id="">
+                <span></span>
+            </div>
             <div class="menu">
                 <ul>
-                    <li class="menu1">
-                        <a href="#">
-                            <img src="assets/img/one.png" alt="">
-                        </a>
-                    </li>
                     <li class="menu2">
                         <a href="#">
                             <img src="assets/img/Logo@3x.png" alt="">
@@ -67,7 +69,6 @@
         <div class="portLayer portLayer1 youtubeLayer none">
             <div class="portLayer__contents">
                 <h3>Search</h3>
-
                 <div class="info">
                     <div>
                         <input type="search">
@@ -218,71 +219,32 @@
         </div>
     </div>
 
+    <!-- <div id="loading">
+        <div class="loader">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+        <div class="text">
+            로딩중....<em>55%</em><br>
+            <span>윤지성 포트폴리오를 열고 있습니다.<br>조그만 기다려주세요!</span>
+        </div>
+    </div> -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script>
-        gsap.set(".layer", { autoAlpha: 0, y: 20 });
+        // setTimeout(() => {
+        //     let tl = gsap.timeline();
+        //     tl.to("#loading", { opacity: 0, duration: 1, delay: 0.5 });
+        //     tl.to(".footer__info", { height: 60, duration: 1, ease: "power4.out" })
+        //     tl.to(".footer__info .menu", { opacity: 1, duration: 0.4 });
+        //     tl.to(".wallpapers div", { x: 0, stagger: 0.06, duration: 1, ease: "power4.out" })
+        // }, 2000);
 
-        // Selecting menu items
-        const menu1 = document.querySelector('.menu1');
-        const menu2 = document.querySelector('.menu2');
-        const menu3 = document.querySelector('.menu3');
-        const menu4 = document.querySelector('.menu4');
-
-        const allLayers = document.querySelectorAll('.layer');
-
-        function closeAllLayers() {
-            allLayers.forEach(layer => {
-                gsap.to(layer, { autoAlpha: 0, y: 20, backdropFilter: 'blur(0px)', duration: 0.5 });
-            });
-        }
-
-        function toggleLayer(layer) {
-            closeAllLayers();
-            gsap.to(layer, { autoAlpha: 1, y: 0, backdropFilter: 'blur(10px)', duration: 0.5 });
-        }
-
-        // Event listeners for menu items
-        menu1.addEventListener('click', () => toggleLayer(document.querySelector('.layer1')));
-        menu2.addEventListener('click', () => toggleLayer(document.querySelector('.layer2')));
-        menu3.addEventListener('click', () => toggleLayer(document.querySelector('.layer3')));
-        menu4.addEventListener('click', () => toggleLayer(document.querySelector('.layer4')));
-
-        // 드래그
-        function makeDraggable(element) {
-            var posX = 0, posY = 0, mouseX = 0, mouseY = 0;
-
-            element.addEventListener('mousedown', function (e) {
-                e.preventDefault();
-                mouseX = e.clientX;
-                mouseY = e.clientY;
-                document.addEventListener('mousemove', onMouseMove);
-                document.addEventListener('mouseup', onMouseUp);
-            });
-
-            function onMouseMove(e) {
-                posX = mouseX - e.clientX;
-                posY = mouseY - e.clientY;
-                mouseX = e.clientX;
-                mouseY = e.clientY;
-                element.style.left = (element.offsetLeft - posX) + "px";
-                element.style.top = (element.offsetTop - posY) + "px";
-            }
-
-            function onMouseUp() {
-                document.removeEventListener('mousemove', onMouseMove);
-                document.removeEventListener('mouseup', onMouseUp);
-            }
-        }
-
-        // Select all elements with the class 'draggableIcon'
-        var draggableIcons = document.querySelectorAll('.draggableIcon');
-
-        // Apply the dragging functionality to each icon
-        draggableIcons.forEach(function (icon) {
-            makeDraggable(icon);
-        });
     </script>
 </body>
 
