--- a/윤지성/index.html
+++ b/윤지성/index.html
@@ -15,7 +15,7 @@
         <div class="wallpapers">
             <div class="draggableIcon introIcon">
                 <img src="assets/img/intro.png" alt="intro">
-                <span>자기 소개</span>
+                <span>내 컴퓨터</span>
             </div>
             <div class="draggableIcon youtubeIcon">
                 <img src="assets/img/youtube.png" alt="youtube">
@@ -66,38 +66,11 @@
             <div class="date"></div>
         </div>
 
-        <div class="portLayer portLayer1 youtubeLayer none">
-            <div class="portLayer__contents">
-                <h3>Search</h3>
-                <div class="info">
-                    <div>
-                        <input type="search">
-                    </div>
-                    <div>
-                        <ul>
-                            <li>all</li>
-                            <li>coding</li>
-                            <li>react</li>
-                            <li>node.js</li>
-                            <li>javascript</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="view">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="layer layer1 about">
+        <div class="layer layer1 aboutLayer none">
             <div class="layer__contents">
+                <div class="me">
+                    <img src="assets/img/intro.png" alt="">
+                </div>
                 <h3>윤지성</h3>
                 <span class="small">Frontend developer</span>
                 <span class="mail">frontend@naver.com</span>
@@ -111,14 +84,47 @@
                     브라우저 호환성에 대한 지식을 바탕으로 접근성과 사용성을 강조하는 웹사이트를 구축하는 데 특화되어 있습니다. 항상 최신 웹 기술 트렌드를 따르며, 새로운 프레임워크와 라이브러리를
                     배우는 것에 능동적으로 참여하여 기술 스택을 지속적으로 확장하고 있습니다
                 </p>
+                <div class="list">
+                    <dl>
+                        <dt>basic</dt>
+                        <dd><em>HTML</em>: 웹 페이지의 구조와 콘텐츠를 효과적으로 구현할 수 있는 능력을 보유하고 있습니다. 다양한 HTML5 태그와 속성을 활용하여 의미론적이고
+                            접근성이 높은
+                            웹사이트를 개발하는 데 익숙합니다</dd>
+                        <dd><em>CSS</em>: 웹 페이지의 시각적 디자인과 레이아웃을 세련되게 조정할 수 있습니다. Flexbox와 Grid 시스템을 이용한 반응형 웹 디자인을 구현한
+                            경험이 있으며,
+                            CSS 애니메이션과 전환을 활용하여 사용자 경험을 향상시키는 데 능숙합니다.</dd>
+                        <dd><em>JavaScript</em>: 동적 웹 페이지 및 어플리케이션 개발에 있어 깊은 이해도를 보유하고 있습니다. 비동기 프로그래밍, ES6+ 문법, DOM 조작
+                            등을 포함한 고급 개념에 능숙합니다. 대규모 프로젝트에서의 성능 최적화와 디버깅에 경험이 풍부합니다.</dd>
+                        <dd><em>SCSS</em>: CSS 전처리기인 SCSS를 사용하여 보다 효율적이고 유지보수가 용이한 스타일시트를 작성합니다. 중첩 규칙, 믹스인, 함수를 활용한 동적
+                            스타일링에 능숙합니다.</dd>
+                    </dl>
+
+                    <dl>
+                        <dt>framework</dt>
+                        <dd><em>React</em>: 컴포넌트 기반 아키텍처를 이해하고 있으며, 대규모 어플리케이션 개발에 React를 활용한 경험이 풍부합니다. React Hooks, 상태
+                            관리 라이브러리(예: Redux) 및 최적화 기술에 능숙합니다.</dd>
+                        <dd><em>Vue.js </em>: 선언적 렌더링과 컴포넌트 시스템을 이용한 인터랙티브한 UI 개발에 경험이 있습니다. Vuex를 활용한 상태 관리와 Vue
+                            Router를 사용한 라우팅에 익숙합니다.</dd>
+                        <dd><em>Next.js </em>: 서버 사이드 렌더링(SSR)과 정적 사이트 생성(SSG)에 대한 이해를 바
+                            탕으로 Next.js 프레임워크를 활용한 웹 어플리케이션 개발에 경험이 있습니다. SEO 최적화 및 퍼포먼스 향상을 위한 기술적 전략 구현에 능숙합니다</dd>
+                        <dd><em>MySQL </em>: 데이터베이스 설계 및 관리에 있어 실질적인 경험을 가지고 있습니다. SQL 쿼리 작성, 데이터베이스 최적화, 복잡한 조인 및 트랜잭션
+                            처리에 능숙합니다.</dd>
+                        <dd><em>PHP </em>: 서버 사이드 스크립트 작성에 능숙하며, PHP를 사용한 데이터 관리와 동적 웹 페이지 생성에 경험이 있습니다. 객체지향 PHP 개발에
+                            익숙하며, MVC 아키텍처를 이해하고 적용한 경험이 있습니다.</dd>
+                    </dl>
+
+                </div>
             </div>
-            <div class="layer__footer">😎 윤지성 개발자입니다.</div>
+            <div class="layer__footer">
+                <p class="ment">😎 윤지성 개발자입니다. </p>
+                <span class="close"></span>
+            </div>
         </div>
 
         <div class="layer layer2 youtube">
             <div class="layer__contents">
                 <h3>코딩 유튜버</h3>
-                <span class="small">최신 코딩 관련 영상을 볼 수 있습니다.</span>
+                <span class="small">Youtube API <em>API를 이용하여 코딩 관련된 최신 영상을 보여줍니다.</em></span>
                 <span class="mail"></span>
                 <div class="info">
                     <div>
@@ -127,7 +133,7 @@
                     <div>
                         <ul>
                             <li>all</li>
-                            <li>coding</li>
+                            <li class="active">coding</li>
                             <li>react</li>
                             <li>node.js</li>
                             <li>javascript</li>
@@ -141,11 +147,45 @@
                     </div>
                     <div>
                         <div class="img"></div>
+                        <div class="title">Intro to Software Architecture | Overview, Examples, and Diagrams</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">Build Responsive Portfolio Website Using React JS | Next JS 14 | Tailwind CSS
+                            | Framer Motion</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
                         <div class="title">100+ JavaScript Concepts you Need to Know</div>
                     </div>
                     <div>
                         <div class="img"></div>
                         <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">Intro to Software Architecture | Overview, Examples, and Diagrams</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">Build Responsive Portfolio Website Using React JS | Next JS 14 | Tailwind CSS
+                            | Framer Motion</div>
                     </div>
                     <div>
                         <div class="img"></div>
@@ -169,10 +209,10 @@
                     </div>
                 </div>
             </div>
-            <div class="layer__footer">😏 저는 최신 코딩 유튜버에 관심이 많습니다.</div>
+            <div class="layer__footer">😏 유튜브를 통해 코딩 영상을 보면 유혹들이 많습니다. 여기서 보면 최신 코딩만 광고 없이 볼 수 있습니다.</div>
         </div>
 
-        <div class="layer layer3 react">
+        <div class="layer layer3 react none">
             <div class="layer__contents">
                 <h3>리액트 블로그</h3>
                 <span class="small">최신 코딩 관련 영상을 볼 수 있습니다.</span>
@@ -213,7 +253,7 @@
             </div>
         </div>
 
-        <div class="layer layer4">
+        <div class="layer layer4 none">
             <div class="layer__contents"></div>
             <div class="layer__footer">layer4</div>
         </div>
@@ -245,6 +285,17 @@
         //     tl.to(".wallpapers div", { x: 0, stagger: 0.06, duration: 1, ease: "power4.out" })
         // }, 2000);
 
+        // gsap.set(".layer.aboutLayer", { autoAlpha: 0, y: 20, backdropFilter: 'blur(0px)', duration: 0.5 })
+
+        const layerOpen = () => {
+            gsap.to(".layer.aboutLayer", { autoAlpha: 1, y: 0, backdropFilter: 'blur(10px)', duration: 0.5 });
+        }
+        const layerClose = () => {
+            gsap.to(".layer.aboutLayer", { autoAlpha: 0, y: 20, backdropFilter: 'blur(0px)', duration: 0.5 });
+        }
+
+        document.querySelector(".introIcon").addEventListener("click", layerOpen);
+        document.querySelector(".layer__footer .close").addEventListener("click", layerClose);
     </script>
 </body>
 
