--- a/윤지성/index.html
+++ b/윤지성/index.html
@@ -66,7 +66,7 @@
             <div class="date"></div>
         </div>
 
-        <div class="layer layer1 aboutLayer none">
+        <div class="layer layer1 aboutLayer">
             <div class="layer__contents">
                 <div class="me">
                     <img src="assets/img/intro.png" alt="">
@@ -121,7 +121,7 @@
             </div>
         </div>
 
-        <div class="layer layer2 youtube">
+        <div class="layer layer2 youtube none">
             <div class="layer__contents">
                 <h3>코딩 유튜버</h3>
                 <span class="small">Youtube API <em>API를 이용하여 코딩 관련된 최신 영상을 보여줍니다.</em></span>
