--- a/김진우/index.html
+++ b/김진우/index.html
@@ -11,25 +11,7 @@
 </head>
 
 <body>
-    <header id="header">
-        <h1>Jin Woo</h1>
-        <div class="time">2024.01.20(월) <em>Ansan</em></div>
-    </header>
-    <!-- //header -->
-
     <div id="mainIntro">
-        <div class="about">
-            <p>
-                삶이란 누군가에게는 행복이며 누군가에게는 불행이고<br>
-                누군가에게는 축복이리라 나에게 주어진 이 삶은 어떨지 모르겠으나<br>
-                후회없이 살아가는 것 그것이 내 목표이자 부모에 대한 孝이다.
-                <span>- 진우</span>
-                <em class="close"></em>
-            </p>
-            <h1>
-                space
-            </h1>
-        </div>
         <!-- <div class="wallpapers">
             <div class="draggableIcon introIcon">
                 <img src="assets/img/intro.png" alt="intro">
@@ -60,29 +42,33 @@
         <div class="footer__info">
             <div class="menu">
                 <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li class="menu2">
+                        <a href="#">
+                            <img src="assets/img/Logo@3x.png" alt="">
+                        </a>
+                    </li>
+                    <li class="menu3">
+                        <a href="#">
+                            <img src="assets/img/spotify.png" alt="">
+                        </a>
+                    </li>
+                    <li class="menu4">
+                        <a href="#">
+                            <img src="assets/img/newsfeed.png" alt="">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
 
         <div class="layer layer1 aboutLayer none">
             <div class="layer__contents">
-                <div class="head">
-                    <div class="face">
-
-                    </div>
-                    <div class="name">
-                        <div class="me">
-                            <img src="assets/img/intro.png" alt="">
-                        </div>
-                        <h3>김진우</h3>
-                        <span class="small">FullStack developer</span>
-                        <span class="mail">frontend@naver.com</span>
-                    </div>
+                <div class="me">
+                    <img src="assets/img/intro.png" alt="">
                 </div>
+                <h3>윤지성</h3>
+                <span class="small">Frontend developer</span>
+                <span class="mail">frontend@naver.com</span>
                 <p class="intro1">
                     안녕하세요! 창의적인 웹 디자인과 최신 프론트엔드 기술에 열정을 가진 취업 준비생입니다.<br>
                     HTML, CSS, JavaScript를 포함한 다양한 웹 기술에 능숙하며,사용자 경험을 최우선으로 생각하는 웹사이트와 애플리케이션 개발에 경험이 있습니다.
@@ -125,7 +111,7 @@
                 </div>
             </div>
             <div class="layer__footer">
-                <p class="ment">😎 김진우 개발자입니다. </p>
+                <p class="ment">😎 윤지성 개발자입니다. </p>
                 <span class="close"></span>
             </div>
         </div>
@@ -278,7 +264,7 @@
         </div>
         <div class="text">
             로딩중....<em>55%</em><br>
-            <span>김진우 포트폴리오를 열고 있습니다.<br>조그만 기다려주세요!</span>
+            <span>윤지성 포트폴리오를 열고 있습니다.<br>조그만 기다려주세요!</span>
         </div>
     </div> -->
 
