--- a/김현민/index.html
+++ b/김현민/index.html
@@ -23,27 +23,156 @@
     </header>
     <!-- //header -->
 
-    <section id="section1">
-        <div class="text">
-            <div>developer</div>
-            <div><span>the portfolio</span></div>
-            <div><img src="assets/img/face.png" alt="sk"></div>
-            <div>hyunmin</div>
-        </div>
-        <div class="scroll">
-            <i>This is a developer portfolio filled
-                with passion and effort.</i>
-            <span><em>scroll</em>down</span>
-        </div>
-        <canvas id="stars"></canvas>
-    </section>
-    <!-- //section1 -->
+    <main data-scroll-container>
+        <section id="section1">
+            <div class="text">
+                <div class="t1 split">developer
+                </div>
+                <div class="t2 split">the portfolio<span>pro</span></div>
+                <div class="t3"><img src="assets/img/face.png" alt="sk"></div>
+                <div class="t4 split">hyunmin
+                </div>
+            </div>
+            <div class="scroll">
+                <i>This is a developer portfolio filled
+                    with passion and effort.</i>
+                <span><em>scroll</em>down</span>
+            </div>
+            <canvas id="stars"></canvas>
+        </section>
+        <!-- //section1 -->
 
-    <section id="section2"></section>
-    <section id="section3"></section>
-    <section id="section4"></section>
-    <section id="section5"></section>
-    <section id="section6"></section>
+        <section id="section2">
+            <div>
+                <span class="ab">{ Mission & Vision }</span>
+                <div class="aa split">
+                    unitin art and<br>
+                    technology to redefine<br>
+                    digital creativity
+                </div>
+                <div class="bb">
+                    <p class="split">
+                        안녕하세요.<br>
+                        저는 전기공사 분야에서 6년간의 경력을 쌓아온 김현민입니다.<br>
+                        전기공사 일을 통해 다양한 기술을 습득하고 문제 해결 능력을 키웠습니다.<br>
+                        수많은 프로젝트를 수행하며 현장에서의 <br>
+                        실전 경험을 쌓았고, 이를 통해 <br> 전문적인 기술과 노하우를 축적할 수 있었습니다.
+                    </p>
+
+                    <p class="split">
+                        저는 새로운 도전을 찾아 프론트엔드 개발자의 길을 걷기로 결심했습니다.<br>
+                        기술의 발전과 함께 웹 개발에 대한 관심이 커지면서,<br>
+                        저의 미래를 위한 더 나은 기회를 모색하게 되었습니다.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- //section2 -->
+
+        <section id="section3"></section>
+        <section id="section4"></section>
+        <section id="section5"></section>
+        <section id="section6"></section>
+    </main>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+
+    <script>
+        const lenis = new Lenis();
+
+        lenis.on('scroll', (e) => {
+            console.log(e);
+        });
+
+        function raf(time) {
+            lenis.raf(time);
+            requestAnimationFrame(raf);
+        }
+
+        requestAnimationFrame(raf);
+    </script>
+    <!-- <script type="module">
+        import locomotiveScroll from "https://cdn.skypack.dev/locomotive-scroll@4.0.6";
+
+        const lscroll = new locomotiveScroll({
+            el: document.querySelector("[data-scroll-container]"),
+            smooth: true,
+        });
+    </script> -->
+
+    <script>
+        const targets = gsap.utils.toArray(".split");
+        let SplitClient = new SplitType(targets, { type: "lines, words, chars" });
+        let lines = SplitClient.lines;
+        let words = SplitClient.words;
+        let chars = SplitClient.chars;
+
+        gsap.set(".text .t1 .char", { y: 200 })
+        gsap.set(".text .t2 .char", { y: 200 })
+        gsap.set(".text .t2 span", { y: 10, opactiy: 0 })
+        gsap.set(".text .t3 img", { opacity: 0, scale: 0, rotation: 100 })
+        gsap.set(".text .t4 .char", { y: 200 })
+        gsap.set(".scroll", { y: 50, opacity: 0 })
+        gsap.set("#header", { top: -250 })
+
+        const tl = gsap.timeline();
+
+        setTimeout(() => {
+            tl.to(".text .t1 .char", { y: 0, stagger: 0.03, ease: "power3.out" })
+            tl.to(".text .t2 .char", { y: 0, stagger: 0.03, ease: "power3.out" }, "-=0.5")
+            tl.to(".text .t2 span", { y: 0, opactiy: 1 }, "-=0.5")
+            tl.to(".text .t4 .char", { y: 0, stagger: 0.03, ease: "power3.out" }, "-=0.5")
+            tl.to(".text .t3 img", { opacity: 1, scale: 1, rotation: 0, ease: "power1.out" })
+            tl.to(".scroll", { opacity: 1, y: 0, ease: "power4.out" })
+            tl.to("#header", { top: 0, ease: "power4.out" })
+        }, 2000);
+
+
+        gsap.set("#section2 .ab", { opacity: 0 })
+        const ani1 = gsap.timeline();
+        ani1.to("#section2 .ab", { opacity: 1 })
+
+        ScrollTrigger.create({
+            animation: ani1,
+            trigger: "#section2 .ab",
+            start: "top center",
+            end: "bottom top",
+            markers: false
+        });
+
+
+        gsap.set("#section2 .aa .char", { opacity: 0, y: 50 })
+        const ani2 = gsap.timeline();
+        ani2.to("#section2 .aa .char", { opacity: 1, y: 0, stagger: 0.01, ease: "power3.out" })
+
+        ScrollTrigger.create({
+            animation: ani2,
+            trigger: "#section2 .aa",
+            start: "top center",
+            end: "bottom top",
+            markers: false
+        });
+
+
+        gsap.set("#section2 .bb", { opacity: 0 })
+        const ani3 = gsap.timeline();
+        ani3.to("#section2 .bb", { opacity: 1 })
+
+        ScrollTrigger.create({
+            animation: ani3,
+            trigger: "#section2 .bb",
+            start: "top center",
+            end: "bottom top",
+            markers: false
+        });
+
+
+
+    </script>
 
 
     <script>
